# portfolio-website-383d

./: README.md  app.cabal  cabal.project  github_master.m3u8  github_playlist.m3u8  playlist.m3u8  video_url.txt
app/: Main.hs
segments/: segment_000_3a824007.ts  segment_001_3a824007.ts  segment_002_3a824007.ts  segment_003_3a824007.ts  segment_004_3a824007.ts  segment_005_3a824007.ts  segment_006_3a824007.ts  segment_007_3a824007.ts  segment_008_3a824007.ts  segment_009_3a824007.ts  segment_010_3a824007.ts  segment_011_3a824007.ts  segment_012_3a824007.ts  segment_013_3a824007.ts  segment_014_3a824007.ts  segment_015_3a824007.ts  segment_016_3a824007.ts  segment_017_3a824007.ts  segment_018_3a824007.ts  segment_019_3a824007.ts  segment_020_3a824007.ts  segment_021_3a824007.ts  segment_022_3a824007.ts  segment_023_3a824007.ts  segment_024_3a824007.ts  segment_025_3a824007.ts  segment_026_3a824007.ts  segment_027_3a824007.ts  segment_028_3a824007.ts  segment_029_3a824007.ts  segment_030_3a824007.ts  segment_031_3a824007.ts  segment_032_3a824007.ts  segment_033_3a824007.ts  segment_034_3a824007.ts  segment_035_3a824007.ts  segment_036_3a824007.ts  segment_037_3a824007.ts  segment_038_3a824007.ts  segment_039_3a824007.ts  (+134 more)
static/: index.html
